syntax="proto3";
option go_package=".;proto";
import "google/protobuf/empty.proto";

service Inventory {
  rpc SetStock(SetInfo) returns(google.protobuf.Empty); // 设置库存 | 更新库存
  rpc SellStock (MultipleInfo) returns(google.protobuf.Empty); // 销售
  rpc GetStock (GetInfo) returns (StockResp); // 获取库存
  rpc ReturnStock (MultipleInfo) returns(google.protobuf.Empty); // 归还库存
}

message SetInfo {
  int32 goods_id = 1;
  int32 stock = 2;
}

message GetInfo {
  int32 goods_id = 1;
  int32 stock = 2;
}

message MultipleInfo {
  string OrderSN = 1;
  repeated SetInfo sell = 2;
}

message StockResp {
  int32 goods_id = 1;
  int32 stock = 2;
}