syntax = "proto3";
option go_package = ".;proto";

/*
    1. 创建订单
    2. 订单列表 // user_id | 分页
    3. 获取订单详情：order_sn | id
 */

service Order {
  rpc CreateOrder(CreateOrderReq) returns (CreateResp);
  rpc GetList(OrderListReq) returns (OrderListResp);
  rpc GetListDetail (OrderDetailReq) returns (OrderDetailResp);
}

message CreateOrderReq {
  int32  UserID = 1;
  string SubjectTitle = 2;
  double OrderPrice = 3;
  double FinalPrice = 4;
  string Address = 5;
  string RecipientName = 6;
  string RecipientMobile = 7;
  string Message = 8;
}

message CreateResp {
  int32 order_id = 1;
  string order_sn = 2;
}

message OrderListReq {
  int32 page = 3;
  int32 pageSize = 4;
}

message OrderListResp {
  int32 total = 1;
  repeated OrderDetailResp data = 2;
}

message OrderDetailReq{
  int32 order_id = 1;
  string order_sn = 2;
}

message OrderDetailResp{
  int32  UserID = 1;
  string OrderSN = 2;
  string PayType = 3;
  string Status = 4;
  string TradeNo = 5;
  string SubjectTitle = 6;
  float OrderPrice = 7;
  float FinalPrice = 8;
  string Address = 9;
  string RecipientName = 10;
  string RecipientMobile = 11;
  string Message = 12;
  string Snapshot = 13;
  repeated GoodsInfo goods = 14;
}

message GoodsInfo {
  int32 OrderID = 1;
  string OrderSN = 2;
  int32 GoodsID = 3;
  float GoodsPrice = 4;
  float PayPrice = 5;
  string GoodsName = 6;
  int32 Num = 7;
}
